Set payment status for service and gen apps